<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ru.maksonic.rdpodcast.shared.ui_resources.toolbar.ToolbarDisplay
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16dp"
        android:layout_marginTop="@dimen/padding_16dp"
        android:layout_marginEnd="@dimen/padding_16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnPhonePicker"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_btn_phone_picker"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_8dp"
            android:paddingEnd="@dimen/padding_8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/imgCountryFlag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/img_def_country_code_flag"
                android:textColor="@color/color_primary"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtPhoneCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:text="+7"
                android:textColor="@color/color_primary"
                android:textSize="24sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneFieldLayout"
            style="@style/TextInputLayout.RDTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:inputType="phone"
                android:maxLength="@integer/phone_max_length"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordFieldLayout"
        style="@style/TextInputLayout.RDTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16dp"
        android:layout_marginTop="@dimen/padding_16dp"
        android:layout_marginEnd="@dimen/padding_16dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnCaptionEmailState"
        style="@style/TextView.ClickableCaption.RDTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/padding_16dp"
        android:layout_marginEnd="@dimen/padding_16dp"
        android:layout_marginBottom="@dimen/padding_16dp"
        android:text="@string/btn_caption_email_sign_up"
        app:drawableStartCompat="@drawable/ic_email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/Btn.Primary.RDTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_primary"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/padding_16dp"
        android:layout_marginEnd="@dimen/padding_16dp"
        android:layout_marginBottom="@dimen/padding_16dp"
        android:text="@string/btn_next" />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_sms_info"
        android:layout_marginStart="@dimen/padding_16dp"
        android:layout_marginEnd="@dimen/padding_16dp"
        android:layout_marginBottom="@dimen/padding_8dp"
        android:gravity="center_horizontal"/>

</LinearLayout>